# XMwayLoon

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  conanfile.txt  custom_types.json  main.cpp  note.txt
benchmark/: CMakeLists.txt  date_benchmark.cpp  efficiency_experiment.cpp  english_date_benchmark.cpp  english_date_benchmark_old.cpp  number_benchmark.cpp
benchmark/history/date/: console_history.txt
benchmark/history/english_date/: before_refactored_output.txt  console_history.txt
benchmark/history/number/: before_console.txt
benchmark/old_english_date/: english_date_old.cpp  english_date_old.h
lib/: CMakeLists.txt
lib/GUI/: CMakeLists.txt
lib/GUI/include/gui/: encoding_type_panel.h  extend_page.h  extend_panel.h  gen_panel.h  generate_page.h  id.h  main_frame.h  output_amount_container.h  output_amount_panel.h  output_format_container.h  output_format_panel.h  record_number_spin_ctrl.h  type_generation.h  type_generation_container.h  type_generation_panel.h  type_list.h  type_listview.h
lib/GUI/include/gui/data_generation/: encoding_type_container.h  generated_file_container.h  output_amount_container.h  output_format_container.h  type_generation_container.h  type_grid.h
lib/GUI/include/gui/grid_row/: row_type_alphanumeric_level_3.h  row_type_level_1.h  row_type_level_2.h  row_type_numeric_level_3.h
lib/GUI/include/gui/type/: alpha_numeric_level_3.h  numeric_level_3.h  type_level_1.h  type_level_2.h  type_level_3.h
lib/GUI/src/: encoding_type_container.cpp  encoding_type_panel.cpp  extend_page.cpp  extend_panel.cpp  gen_panel.cpp  generate_page.cpp  main_frame.cpp  output_amount_container.cpp  output_amount_panel.cpp  output_format_container.cpp  output_format_panel.cpp  preference_dialog.cpp  record_number_spin_ctrl.cpp  type_generation.cpp  type_generation_container.cpp  type_generation_panel.cpp  type_grid.cpp  type_list.cpp  type_listview.cpp
lib/GUI/src/data_generation/: encoding_type_container.cpp  encoding_type_event.cpp  generate_event.cpp  generate_page.cpp  generated_file_container.cpp  output_amount_container.cpp  output_format_container.cpp  type_generation_container.cpp  type_grid.cpp  type_scale_event.cpp
lib/GUI/src/grid_row/: setter_alphanumeric_level_3.cpp  setter_below_level_3.cpp  setter_numeric_level_3.cpp
lib/GUI/src/type/: setter_alphanumeric_level_3.cpp  setter_below_level_3.cpp  setter_numeric_level_3.cpp
lib/GUI/src/type_extension/: extend_page.cpp
lib/gui/: CMakeLists.txt
lib/gui/include/gui/: app.h  id.h  main_frame.h  preference_dialog.h  type_loader.h
lib/gui/include/gui/data_generation/: encoding_type_container.h  generate_page.h  generated_file_container.h  input_validator.h  output_amount_container.h  output_format_container.h  read_me_dialog.h  read_me_panel.h  type_generation_container.h  type_grid.h
lib/gui/include/gui/grid_row/: row_type_alphanumeric_level_3.h  row_type_level_1.h  row_type_numeric_level_3.h
lib/gui/include/gui/type_extension/: extend_page.h  extension_by_file_container.h  extension_manually_container.h  read_me_dialog.h  read_me_panel.h
lib/gui/src/: app.cpp  main_frame.cpp  type_loader.cpp
lib/gui/src/data_generation/: encoding_type_container.cpp  encoding_type_event.cpp  gen_info_packaging.cpp  generate_event.cpp  generate_page.cpp  generated_file_container.cpp  input_validator.cpp  output_amount_container.cpp  output_format_container.cpp  read_me_dialog.cpp  read_me_panel.cpp  type_generation_container.cpp  type_grid.cpp  type_scale_event.cpp  validate_gen_info.cpp
lib/gui/src/grid_row/: setter_alphanumeric_level_3.cpp  setter_below_level_3.cpp  setter_numeric_level_3.cpp
lib/gui/src/type_extension/: extend_page.cpp  extension_by_file_container.cpp  extension_by_file_event.cpp  extension_manually_container.cpp  extension_manually_event.cpp  read_me_dialog.cpp  read_me_panel.cpp
lib/logic/: CMakeLists.txt
lib/logic/include/logic/: CSV_writer.h  input_validator.h  type_loader.h
lib/logic/include/logic/generation_task_manager/: generator.h  random_data_writers.h
lib/logic/src/: input_validator.cpp  type_loader.cpp
lib/logic/src/generation_task_manager/: generator.cpp  random_data_writers.cpp  write_methods.cpp
lib/model/: CMakeLists.txt
lib/model/include/: model.h
lib/model/include/model/: connector.h  generate_info.h  model.h
lib/model/include/model/db/: initializer.h  orm.h
lib/model/include/model/type/: alphanumeric_type.h  enums.h  general_type.h  numeric_type.h  typedef.h
lib/model/include/type/: alpha_numeric_type.h  general_type.h  numeric_type.h
lib/model/src/: generate_info.cpp  initializer.cpp  model.cpp
lib/randomizer/: CMakeLists.txt
lib/randomizer/include/randomizer/: boolean_randomizer.h  custom_randomizer.h  date_randomizer.h  global_objects.h  name_randomizer.h  nrc_randomizer.h  number_randomizer.h  pangram_randomizer.h  ph_number_randomizer.h  root_randomizer.h  type_randomizer.h  typedef.h
lib/randomizer/include/randomizer/name/: name_randomizer.h
lib/randomizer/src/: boolean_randomizer.cpp  custom_randomizer.cpp  date_randomizer.cpp  name_randomizer.cpp  nrc_randomizer.cpp  number_randomizer.cpp  pangram_randomizer.cpp  ph_number_randomizer.cpp
lib/randomizer/src/name/: name_randomizer.cpp  uni_name_randomizer.cpp  zg_name_randomizer.cpp
lib/randomizer/src/ph_number/: mpt.cpp  mytel.cpp  ooredoo.cpp  ph_number.cpp  telenor.cpp
test/: CMakeLists.txt  boolean_test.cpp  date_test.cpp  english_date_old_test.cpp  english_date_test.cpp  general_test.cpp  number_test.cpp  pangram_test.cpp  ph_num_test.cpp
test/GUI/: CMakeLists.txt
test/gui/: CMakeLists.txt  type_compare_test.cpp
test/logic/: CMakeLists.txt  csv_generation_in_task.cpp  csv_test.cpp  file_test.cpp  general_test.cpp  generation.h  html_generation_in_task.cpp  json_test.cpp  mmtext.h  parallel_test.cpp  xml_test.cpp
test/randomizer/: CMakeLists.txt  boolean_test.cpp  custom_test.cpp  date_test.cpp  english_date_old_test.cpp  general_test.cpp  name_test.cpp  nrc_test.cpp  number_test.cpp  pangram_test.cpp  ph_num_test.cpp  types.h
(+73 files in other folders)
