cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 17)


add_executable(english_date_benchmark_old english_date_benchmark_old.cpp)
add_executable(date_benchmark date_benchmark.cpp)
add_executable(efficiency_experiment efficiency_experiment.cpp)


#target_compile_options(date_benchmark PRIVATE -O3)
target_compile_options(efficiency_experiment PRIVATE -O0)
target_compile_options(english_date_benchmark_old PRIVATE -O3)
target_compile_options(date_benchmark PRIVATE -O3)

target_link_libraries(date_benchmark benchmark ShinMwayLoon)
target_link_libraries(english_date_benchmark_old benchmark ShinMwayLoon)
target_link_libraries(efficiency_experiment benchmark)